--- a/src/app/choice/choice.page.html
+++ b/src/app/choice/choice.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>choice</ion-title>
+    <ion-title i18n="Choice Title">Language choice</ion-title>
   </ion-toolbar>
 </ion-header>
 
