--- a/src/app/red/red.page.html
+++ b/src/app/red/red.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Red</ion-title>
+    <ion-title i18n="Red Fruits Title">Red fruits</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div class="ion-padding">The red fruits:</div>
+  <ion-list>
+    <ion-item>Strawberry</ion-item>
+    <ion-item>Blueberry</ion-item>
+    <ion-item>Cherry</ion-item>
+  </ion-list>
 
 </ion-content>
