--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="choice">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-label i18n="Choice Title">Language choice</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="red">
+      <ion-icon name="ellipse" color="danger"></ion-icon>
+      <ion-label i18n="Red Fruits Title">Red fruits</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="yellow">
+      <ion-icon name="square" color="warning"></ion-icon>
+      <ion-label i18n="Yellow Fruits Title">Yellow fruits</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
