--- a/src/app/red/red.page.html
+++ b/src/app/red/red.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title i18n="Red Fruits Title">Red fruits</ion-title>
+    <ion-title>{{'red.title'|translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">The red fruits:</div>
+  <div class="ion-padding">{{'red.desc'|translate}}</div>
   <ion-list>
-    <ion-item>Strawberry</ion-item>
-    <ion-item>Blueberry</ion-item>
-    <ion-item>Cherry</ion-item>
+    <ion-item>{{'red.items.strawberry'|translate}}</ion-item>
+    <ion-item>{{'red.items.blueberry'|translate}}</ion-item>
+    <ion-item>{{'red.items.cherry'|translate}}</ion-item>
   </ion-list>
 
 </ion-content>
