--- a/src/app/yellow/yellow.page.html
+++ b/src/app/yellow/yellow.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title i18n="Yellow Fruits Title">Yellow fruits</ion-title>
+    <ion-title>{{'yellow.title'|translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding" i18n="Yellow Fruits Description">The yellow fruits:</div>
+  <div class="ion-padding">{{'yellow.desc'|translate}}</div>
   <ion-list>
-    <ion-item i18n="Lemon Item">Lemon</ion-item>
-    <ion-item i18n="Banana Item">Banana</ion-item>
-    <ion-item i18n="Apricot Item">Apricot</ion-item>
+    <ion-item>{{'yellow.items.lemon'|translate}}</ion-item>
+    <ion-item>{{'yellow.items.banana'|translate}}</ion-item>
+    <ion-item>{{'yellow.items.apricot'|translate}}</ion-item>
   </ion-list>
 
 </ion-content>
