--- a/src/app/choice/choice.page.html
+++ b/src/app/choice/choice.page.html
@@ -5,5 +5,7 @@
 </ion-header>
 
 <ion-content>
+  <div i18n="@@choice.today_is" class="ion-text-center ion-padding-top">Today is</div>
+  <div class="ion-text-center">{{date|date}}</div>
 
 </ion-content>
