- Add date representation

--- a/src/app/choice/choice.page.html
+++ b/src/app/choice/choice.page.html
@@ -11,4 +11,7 @@
     <ion-button (click)="changeLang('en')">EN</ion-button>
   </div>
 
+  <div class="ion-text-center ion-padding-top">{{'choice.today_is'|translate}}</div>
+  <div class="ion-text-center">{{date|date}}</div>
+
 </ion-content>
