- Implement Transloco library

--- a/src/app/choice/choice.page.html
+++ b/src/app/choice/choice.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{'choice.title'|translate}}</ion-title>
+    <ion-title>{{'choice.title'|transloco}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
     <ion-button (click)="changeLang('en')">EN</ion-button>
   </div>
 
-  <div class="ion-text-center ion-padding-top">{{'choice.today_is'|translate}}</div>
-  <div class="ion-text-center">{{date|date}}</div>
+  <div class="ion-text-center ion-padding-top">{{'choice.today_is'|transloco}}</div>
+  <div class="ion-text-center">{{date|translocoDate}}</div>
 
 </ion-content>
