--- a/src/app/red/red.page.html
+++ b/src/app/red/red.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{'red.title'|translate}}</ion-title>
+    <ion-title>{{'red.title'|transloco}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">{{'red.desc'|translate}}</div>
+  <div class="ion-padding">{{'red.desc'|transloco}}</div>
   <ion-list>
-    <ion-item>{{'red.items.strawberry'|translate}}</ion-item>
-    <ion-item>{{'red.items.blueberry'|translate}}</ion-item>
-    <ion-item>{{'red.items.cherry'|translate}}</ion-item>
+    <ion-item>{{'red.items.strawberry'|transloco}}</ion-item>
+    <ion-item>{{'red.items.blueberry'|transloco}}</ion-item>
+    <ion-item>{{'red.items.cherry'|transloco}}</ion-item>
   </ion-list>
 
 </ion-content>
