--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,17 +3,17 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="choice">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>{{'menu.choice'|translate}}</ion-label>
+      <ion-label>{{'menu.choice'|transloco}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="red">
       <ion-icon name="ellipse" color="danger"></ion-icon>
-      <ion-label>{{'menu.red'|translate}}</ion-label>
+      <ion-label>{{'menu.red'|transloco}}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="yellow">
       <ion-icon name="square" color="warning"></ion-icon>
-      <ion-label>{{'menu.yellow'|translate}}</ion-label>
+      <ion-label>{{'menu.yellow'|transloco}}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
