--- a/src/app/yellow/yellow.page.html
+++ b/src/app/yellow/yellow.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{'yellow.title'|translate}}</ion-title>
+    <ion-title>{{'yellow.title'|transloco}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">{{'yellow.desc'|translate}}</div>
+  <div class="ion-padding">{{'yellow.desc'|transloco}}</div>
   <ion-list>
-    <ion-item>{{'yellow.items.lemon'|translate}}</ion-item>
-    <ion-item>{{'yellow.items.banana'|translate}}</ion-item>
-    <ion-item>{{'yellow.items.apricot'|translate}}</ion-item>
+    <ion-item>{{'yellow.items.lemon'|transloco}}</ion-item>
+    <ion-item>{{'yellow.items.banana'|transloco}}</ion-item>
+    <ion-item>{{'yellow.items.apricot'|transloco}}</ion-item>
   </ion-list>
 
 </ion-content>
