--- a/src/app/choice/choice.page.html
+++ b/src/app/choice/choice.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-text-center">
 
   <div class="ion-padding ion-text-center">
     <ion-button (click)="changeLang('fr')">FR</ion-button>
@@ -13,5 +13,7 @@
 
   <div class="ion-text-center ion-padding-top">{{'choice.today_is'|transloco}}</div>
   <div class="ion-text-center">{{date|translocoDate}}</div>
+
+  <div class="ion-padding-top">{{'choice.win'|transloco:{sum: 10000000000 | translocoCurrency, percent: 0.1 | translocoPercent} }}</div>
 
 </ion-content>
